--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.17.1",
     "http": "0.0.1-security",
     "http-proxy": "^1.18.0",
+    "materialize-css": "^1.0.0-rc.2",
     "mocha": "^7.1.1",
     "mongodb": "^3.5.5",
     "node-fetch": "^2.6.0",
